nearly complete the jackson 3 rewrite